k8s/03-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexora-postgres
  namespace: nexora-academy
  labels:
    app: nexora-postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  selector:
    app: nexora-postgres
  clusterIP: None
