k8s/04-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexora-app
  namespace: nexora-academy
  labels:
    app: nexora-app
spec:
  ports:
    - port: 8081
      targetPort: 8081
      name: http
  selector:
    app: nexora-app
  type: ClusterIP
